styles.css
@font-face{
  font-family: roboto-med;
  src:url(./fonts/Roboto-Medium.ttf);
}

@font-face{
  font-family: lob-reg;
  src:url(./fonts/LobsterTwo-Regular.ttf);
}

::-webkit-scrollbar {
  width: 11px;
}

::-webkit-scrollbar-track {
  background: var(--bg-color-dipper);
  border: 1px solid #032829;
}

::-webkit-scrollbar-thumb {
  background: var(--text-color-light);
  border-radius: 5rem;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}



*{
  margin: 0;
  padding: 0;
  font-family: 'roboto-med', sans-serif;
  box-sizing: border-box;
  scroll-behavior: smooth;
  text-decoration: none;
  transition: 0.5s linear;
}

:root{
  --bg-color-dipper: #0C3436;
  --text-color-light: #ffffff;
  --sec-color: #FFC727;
  --color-black: #000000;
  --almost-white: #D9D9D9;
  --text-big: 5rem;
  --text-h2: 3rem;
  --text-p: 1.1rem;
  --border: 1px solid rgba(255, 255, 255, 0.3);
  --z-minus: -1;
  --z-plus-1: 1;
  --z-plus-2: 2;
  --z-plus-3: 3;
  --box-shadow: 2px 2px 10px 4px rgb(14 55 54 / 15%)
}


html{
  list-style: none;
  font-size: 62.5%;
  scroll-padding-top: 9rem;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body{
  
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  overflow-x: hidden;
}

section{
  padding: 9rem 7%;
}


.header{
  background: var(--bg-color-dipper);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1.5rem 7%;
  position: fixed;
  border-bottom: var(--border);
  top: 0;
  left: 0;
  right: 0;
  z-index: var(--z-plus-1);
}

.header .logo img{
  height: 4rem;
}

.header .navbar a{
  font-family: lob-reg;
  margin: 0 1rem;
  font-size: 1.7rem;
  color: var(--text-color-light);
}

.header .navbar a:hover{
  color: var(--sec-color);
}

.header .icons i{
  color: var(--text-color-light);
  cursor: pointer;
  font-size: 2.5rem;
  margin-left: 2rem;
}

#icon-menu{
  display: none;
}

.home{
  min-height: 100vh;
  display: flex;
  align-items: center;
  background: url(./images/back-g.png) no-repeat;
  background-size: cover;
  background-position: center;
}

.btn{
  font-size: 1.5rem;
  color: var(--text-color-light);
  background: var(--color-black);
  padding: 19px 36px;
  border-radius: 5px;
  position: relative;
  top: 1.3rem;
  font-weight: 600;
}

.btn:hover{
  background: var(--sec-color);
  color: var(--color-black);
}


.home .content{
  min-width: 60rem;
}

.home .content h1{
  width: 50rem;
  font-size: 5.5rem;
  color: var(--text-color-light);
}

.home .content p{
  width: 29rem;
  font-size: 1.3rem;
  font-weight: lighter;
  line-height: 1.8;
  padding: 1rem 0;
  color: var(--sec-color);

}



.heading{
  text-align: center;
  color: var(--text-color-light);
  text-transform: uppercase;
  padding-bottom: 3.5rem;
  font-size: 4rem;
}

.heading span{
  color: var(--sec-color);
}

.about{
  background: url(./images/all-backg.png) no-repeat;
  background-size: cover;
  background-position: center;
}

.about .row{
  display: flex;
  align-items: center;
  background: var(--color-black);
  flex-wrap: wrap;
}

.about .row .image{
  flex: 1 1 45rem;

}

.about .row .image img{
  width: 100%;
}



.about .row .content{
  flex: 1 1 45rem;
  padding: 2rem;
}

.about .row .content h3{
  padding-top: 33px;
  font-size: 3rem;
  color: var(--text-color-light);
}

.about .row .content p{
  padding-bottom: 2rem;
  font-size: 1.5rem;
  color: #ccc;
  line-height: 1.6;
}

.fade-in{
  opacity: 0;
  transition: 1s linear;
}

.fade-in.appear{
  opacity: 1;
}

.content .btn2{
  color: var(--sec-color);
}

.content .btn2:hover{
  color: var(--bg-color-dipper);
}

.menu{
  background: url(./images/all-backg.png) no-repeat;
  background-size: cover;
  background-position: center;
}

.menu .box-container{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
  gap: 1.5rem;
}

.menu .box-container .box{
  padding: 5rem;
  text-align: center;
  border: var(--border);
  border-radius: 12px;
}

.menu .box-container .box img{
  height: 10rem;
}

.menu .box-container .box h3{
  color: var(--text-color-light);
  font-size: 2rem;
  padding: 1rem 0;
}

.menu .box-container .box .price{
  color: var(--text-color-light);
  font-size: 2.5rem;
  padding: 1.7rem;
}

.menu .box-container .box .price span{
  color: var(--text-color-light);
  font-size: 1.5rem;
  text-decoration: line-through;
  font-weight: lighter;
}

.menu .box-container .box:hover{
 border: 1px solid var(--sec-color);
}

.shop{
  background: url(./images/all-backg.png) no-repeat;
  background-size: cover;
  background-position: center;
}

.shop .box-container{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
  gap: 1.9rem;
}

.shop .box{
 border-radius: 8px;
}

.shop .box-container .box{
  text-align: center;
  border: var(--border);
  padding: 2rem;

}

.shop .box-container .box .icons a{
  height: 5rem;
  width: 5rem;
  line-height: 5rem;
  font-size: 2rem;
  border: var(--border);
  color: var(--text-color-light);
  margin: .3rem;
}

.shop .box-container .box .icons a:hover{
  background: var(--color-black);

}


.shop .box-container .box:hover{
  border: 1px solid var(--sec-color);

}


.shop .box-container .box .image{
  padding: 2.5rem 0;
}

.shop .box-container .box .image img{
  height: 25rem;
}

.fade-in-element {
  opacity: 0;
  transition: 1s linear;
}

.fade-in-element.active {
  opacity: 1;
}



.customers{
  background: url(./images/all-backg.png) no-repeat;
  background-size: cover;
  background-position: center;
}

.review-container{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, auto));
  gap: 4rem;
  margin-top: 2rem;
}

.review-container .box{
  padding: 20px;
  box-shadow: var(--box-shadow);
  border-radius: 0.5rem;
  text-align: center;
}

.stars .bx{
  color: var(--sec-color);
  line-height: 3;
}

.shop .box-container .content h3{
  font-size: 20px;
  color: var(--text-color-light);
}

.shop .box-container .content .price{
  color: var(--text-color-light);
  font-size: 14px;
}

.shop .box-container .content .price span{
  text-decoration: line-through;
}

.review-container .box p{
  font-size: 0.938rem;
  color: var(--almost-white);
}

.review-container .box h2{
  line-height: 2;
  font-size: 1.3rem;
  color: var(--text-color-light);
  font-weight: 600;
  margin: 0.5rem 0 0.5rem;

}

.review-container .box img{
  width: 70px;
  height: 70px;
  object-fit: cover;
}

.review-container .box:hover{
  background: #5A4509;
}

.fade-in-delay{
  opacity: 0;
}

.fade-in-delay.appear-delay{
  opacity: 1;
}

.contact .row{
  display: flex;
  align-items: center;
  background: var(--color-black);
  flex-wrap: wrap;
  grid-area: 1rem;
}

.contact .row .map{
  flex: 1 1 45rem;
  width: 100%;
  object-fit: cover;
}

.contact .row form {
  flex: 1 1 45rem;
  padding: 5rem 2rem;
  text-align: center;
}

.contact .row form h3{
  text-transform: uppercase;
  font-size: 3.5rem;
  color: var(--text-color-light);
}

.contact .row form .inputBox{
  display: flex;
  align-items: center;
  margin-top: 2rem;
  margin-bottom: 2rem;
  background: var(--color-black);
  border: var(--border);
}

.contact .row form .inputBox span{
  color: var(--text-color-light);
  font-size: 2rem;
  padding-left: 2rem;
}

.contact .row form .inputBox input{
  width: 100%;
  padding: 2rem;
  font-size: 1.7rem;
  text-transform: none;
  background: none;
  border: none;
  outline: none;
}


input{
  caret-color: var(--text-color-light);
  color: var(--text-color-light);
}

input:focus::placeholder{
  border: none;
}


.btn2{
  font-size: 1.5rem;
  color: var(--text-color-light);
  background: var(--color-black);
  padding: 19px 36px;
  border-radius: 5px;
}

.btn2:hover{
  animation: shake 0.5s;
}

.footer{
  background: var(--color-black);
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, auto));
  gap: 1.5rem;
}

.footer-box h3{
  padding-bottom: 1rem;
  font-size: 2rem;
  color: var(--text-color-light);
  font-weight: 600;
  margin-bottom: 10px;
  line-height: 0;
}

.footer-box p{
  line-height: 0.8;
  color: var(--almost-white);
  font-size: var(--text-p);
  margin-bottom: 10px;
}

.social{
  line-height: 2;
  display: flex;
  align-items: center;
  column-gap: 0.5;
}

.socials a .bx{
  color: var(--text-color-light);
  font-size: 24px;
  padding: 10px;
  background: var(--sec-color);
  border-radius: 0.2rem;
}

.socials a .bx:hover{
  background: #5A4509;
  color: var(--almost-white);
  animation: shake 0.5s;
}

.footer-box h3{
  padding-bottom: 1rem;
  font-size: 2rem;
  color: var(--text-color-light);
  font-weight: 600;
}

.footer-box li a{
  font-size: var(--text-p);
  color: var(--almost-white);
  line-height: 2;
}

.footer-box li a:hover{
  color: var(--sec-color);
}

.contact{
  color: var(--text-color-light);
  font-size:var(--text-p);
  display: flex;
  flex-direction: column;
  row-gap: 0.5rem;
}

.contact span{
  color: var(--almost-white);
}




















/******************** Media Querie ********************/


@media (max-width: 1480px){
  header{
    padding: 12px 2.5%;
    transition: .1s;
  }

 
@media (max-width: 1100px){
  :root{
    --text-big: 4rem;
    --text-h2: 2.5rem;
    --text-p: 1rem;
  }

  .home h1{
    font-size: 2.5rem;
  }

  .home{
    height: 87vh;
  }

}

@media (max-width: 1058px) {
  header{
    padding: 16px 60px;
  }

  section{
    padding: 50px 60px;
  }

  .home-text h1{
    font-size: 2.4rem;
  }
  
}

@media (max-width: 820px){

  .navbar{
    height: 100vh;
  }

  #icon-menu {
    display: inline-block;
}


.header .navbar {
    position: absolute;
    top: 100%;
    right: -100%;
    background: var(--text-color-light);
    width: 30rem;
    height: 100vh;
}

.header .navbar a {
    display: block;
    margin: 1.5rem;
    padding: 0.7rem;
    color: var(--color-black);
}

.navbar.open { 
    right: 0;

}

.footer-box{
  margin-left: 8rem;
}

}

@media (max-width: 768px){
  header{
    padding: 12px 4%;
  }
}


@media (max-width: 428px){

  body{
    overflow-x: hidden;
  }

  section{
    padding: 1rem;
  }

  .home .content h1{
    width: 30rem;
    font-size: 33px;
    padding-right: 33px;
  }

  .home .content p{
    width: 23rem;
  }

  section{
    padding-bottom: 19rem;
    
  }

  .home p{
    color: red;
  }

  .footer-box{
    margin-left: 0;
  }

  .menu h1{
    width: 300px;
    text-align: center;
    margin-left: 4rem;
  }

  .footer-mobile{
    padding-top: 3rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }

  .footer-mobile .coffee-shop p{
    line-height: 1;
  } 

  .view-contact{
    padding-top: 2rem;
  }

}

@media (max-width: 375px){

  .header .navbar { 
    width: 22rem;
}

.menu h1{
  margin-left: 1rem;
}

.footer-box .socials .bxl-youtube{
  margin-top: 5px;
}
}

@media (max-width: 360px){
  header{
    padding: 9px 4% !important;
  }

  .logo img{
    width: 25px !important;
  }

  .home .content h1{
    font-size: 2.4rem;
  }

  .home .content p{
    font-size: 1rem;
  }

  .image{
    order: 2;
    
  }

  .about .content p{
    text-align: center !important;
  }

}

